[project]
name = "mcp-server-na"
version = "0.1.0"
description = "MCP Server for NetworkAdvisor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "pydantic==2.10.6",
    "volcengine-python-sdk==1.1.2",
    "dynaconf==3.2.10",
    "jsonref>=1.1.0",
]

[project.scripts]
mcp-server-na = "mcp_server_na.main:main"